# MiniPas

./: .gitignore  CMakeLists.txt  代码阅读指南.md  已实现功能.md  已实现的功能.md  改进点.md  翻译文法.md
MiniPasPlus/: CMakeLists.txt  README.md  VM指令表.md  代码阅读指南.md  原始文法与符号全称对照.md  已实现功能.md  核心代码阅读顺序.md  答辩代码分层说明.md  翻译文法完整版（箭头版）.md
MiniPasPlus/.qt/: 代码阅读指南.md
MiniPasPlus/.qt/include/: CompileResult.h  Lexer.h  Parser.h  SymbolTable.h  Token.h
MiniPasPlus/.qt/src/: CompilerFacade.cpp  Interpreter.cpp  Lexer.cpp  Parser.cpp  ParserSupport.cpp
MiniPasPlus/GUI/: BackendTargetCodeGen.cpp  CodeEditorWithLineNumber.cpp  CodeEditorWithLineNumber.h  MainWindow.cpp  MainWindow.h  SimplePrecedence.cpp  SimplePrecedence.h  TargetCodeTrace.h  main.cpp
MiniPasPlus/VM/: VirtualMachine.cpp  VirtualMachine.h
MiniPasPlus/include/: ActivationRecordDemo.h  BackendOptimization.h  CodeEditorWithLineNumber.h  CompileResult.h  CompilerBackendStages.h  CompilerFacade.h  Interpreter.h  Lexer.h  MainWindow.h  Parser.h  Quadruple.h  RuntimeResultDemo.h  SimplePrecedence.h  SymbolTable.h  TargetCodeDemo.h  Token.h  TypeTable.h  VirtualMachine.h
MiniPasPlus/src/: ActivationRecordDemo.cpp  BackendOptimization.cpp  BackendTargetCodeGen.cpp  CodeEditorWithLineNumber.cpp  CompilerFacade.cpp  Interpreter.cpp  Lexer.cpp  MainWindow.cpp  Parser.cpp  ParserSupport.cpp  RuntimeResultDemo.cpp  SimplePrecedence.cpp  SymbolTable.cpp  TargetCodeDemo.cpp  TypeTable.cpp  VirtualMachine.cpp  main.cpp  main_cli.cpp
MiniPasPlus/tests/programs/: t01_basic_assign.pas  t02_arith_precedence.pas  t03_parentheses.pas  t04_if_else.pas  t05_while_loop.pas  t06_record_fields.pas  t07_array_index.pas  t08_real_promotion.pas  t09_function_call.pas  t10_function_local_var.pas  t11_function_in_expr.pas  t12_record_with_func.pas  t13_comments.pas  t14_char_const.pas  t15_not_equal.pas  t16_nested_while.pas  t17_if_in_function.pas  t18_real_array.pas  t19_record_readback.pas  t20_multi_function.pas
_ppt_extract/: [Content_Types].xml
_ppt_extract/docProps/: app.xml  core.xml  custom.xml
_ppt_extract/ppt/: commentAuthors.xml  presProps.xml  presentation.xml  viewProps.xml
_ppt_extract/ppt/_rels/: presentation.xml.rels
_ppt_extract/ppt/media/: image11.wmf  image12.wmf  image13.wmf  image14.wmf  image15.wmf  image16.wmf  image17.wmf  image18.wmf  image20.wmf
_ppt_extract/ppt/notesMasters/: notesMaster1.xml
_ppt_extract/ppt/slideLayouts/: slideLayout105.xml  slideLayout113.xml  slideLayout22.xml  slideLayout27.xml  slideLayout29.xml  slideLayout30.xml  slideLayout43.xml  slideLayout59.xml  slideLayout79.xml  slideLayout89.xml  slideLayout97.xml
_ppt_extract/ppt/slideMasters/: slideMaster1.xml  slideMaster10.xml  slideMaster11.xml  slideMaster2.xml  slideMaster3.xml  slideMaster4.xml  slideMaster5.xml  slideMaster6.xml  slideMaster7.xml  slideMaster8.xml  slideMaster9.xml
_ppt_extract/ppt/slideMasters/_rels/: slideMaster1.xml.rels  slideMaster10.xml.rels  slideMaster11.xml.rels  slideMaster2.xml.rels  slideMaster3.xml.rels  slideMaster4.xml.rels  slideMaster5.xml.rels  slideMaster6.xml.rels  slideMaster7.xml.rels  slideMaster8.xml.rels  slideMaster9.xml.rels
_ppt_extract/ppt/slides/: slide1.xml  slide10.xml  slide11.xml  slide12.xml  slide13.xml  slide14.xml  slide15.xml  slide16.xml  slide17.xml  slide18.xml  slide19.xml  slide2.xml  slide20.xml  slide21.xml  slide22.xml  slide23.xml  slide24.xml  slide25.xml  slide26.xml  slide27.xml  slide28.xml  slide29.xml  slide3.xml  slide30.xml  slide31.xml  slide32.xml  slide33.xml  slide34.xml  slide35.xml  slide36.xml  slide37.xml  slide38.xml  slide4.xml  slide5.xml  slide6.xml  slide7.xml  slide8.xml  slide9.xml
_ppt_extract/ppt/slides/_rels/: slide1.xml.rels  slide10.xml.rels  slide11.xml.rels  slide13.xml.rels  slide14.xml.rels  slide2.xml.rels  slide20.xml.rels  slide29.xml.rels  slide3.xml.rels  slide31.xml.rels  slide32.xml.rels  slide33.xml.rels  slide34.xml.rels  slide35.xml.rels  slide36.xml.rels  slide37.xml.rels  slide38.xml.rels  slide4.xml.rels  slide7.xml.rels
_ppt_extract/ppt/tags/: tag1.xml  tag2.xml  tag3.xml
_ppt_extract/ppt/theme/: theme10.xml  theme11.xml  theme12.xml  theme8.xml  theme9.xml
参考文件/基础知识点/: 复习总结.txt  第2章  形式语言基础(2).txt  第4章 词法分析.txt  第5章  语法分析1.txt  第5章  语法分析3.txt  第5章  语法分析4.txt  第6章  符号表组织.txt  第7章 中间语言(3).txt  第8章  优化.txt  第9章  目标代码生成(2).txt
基础知识点/: 第1章  编译程序基本概念.txt  第2章  形式语言基础(1) .txt  第3章  自动机基础(1).txt  第3章  自动机基础(2).txt  第5章  语法分析2.txt  第5章  语法分析5.txt  第7章 中间语言(1).txt  第7章 中间语言(2).txt  第9章  目标代码生成(1).txt
